--- a/package.json
+++ b/package.json
@@ -8,15 +8,11 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "test": "playwright test"
+    "astro": "astro"
   },
   "dependencies": {
     "@fontsource/montserrat": "^4.5.14",
     "@fontsource/source-code-pro": "^4.5.14",
     "astro": "^2.0.0"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.30.0"
   }
 }
