--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^3.0.1",
     "@fontsource/montserrat": "^4.5.14",
     "@fontsource/source-code-pro": "^4.5.14",
-    "astro": "^2.0.0"
+    "astro": "^2.0.14",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
